--- a/src/assets/css/topmenu.css
+++ b/src/assets/css/topmenu.css
@@ -18,3 +18,63 @@
     align-items: flex-start;
     justify-content: start;
 }
+
+.el-tabs__item.is-active{
+    font-weight: bold;
+}
+
+.el-tabs--card>.el-tabs__header .el-tabs__item.is-active{
+    border-bottom: 2px solid #4286EE;
+
+}
+
+.el-tabs--card>.el-tabs__header .el-tabs__item.is-active.is-closable{
+    padding: 0px 20px!important;
+    margin: 0px 40px!important;
+}
+
+.el-tabs--card>.el-tabs__header .el-tabs__item .is-icon-close{
+    right: -20px;
+}
+.el-tabs--bottom.el-tabs--border-card>.el-tabs__header .el-tabs__item:last-child, .el-tabs--bottom.el-tabs--card>.el-tabs__header .el-tabs__item:last-child, .el-tabs--top.el-tabs--border-card>.el-tabs__header .el-tabs__item:last-child, .el-tabs--top.el-tabs--card>.el-tabs__header .el-tabs__item:last-child{
+    padding-right: 20px;
+    margin-right: 40px;
+}
+
+.el-tabs--bottom.el-tabs--border-card>.el-tabs__header .el-tabs__item:nth-child(2), .el-tabs--bottom.el-tabs--card>.el-tabs__header .el-tabs__item:nth-child(2), .el-tabs--top.el-tabs--border-card>.el-tabs__header .el-tabs__item:nth-child(2), .el-tabs--top.el-tabs--card>.el-tabs__header .el-tabs__item:nth-child(2){
+    padding-left:20px;
+    margin-left:40px;
+}
+.el-tabs--card>.el-tabs__header .el-tabs__item{
+    border-left: none!important;
+}
+
+
+.el-tabs__item:hover{
+    padding: 0px 20px!important;
+    margin: 0px 40px!important;
+}
+
+.el-tabs__item{
+    padding: 0px 20px;
+    margin:0px 40px;
+    color: #A69D9D;
+    font-weight: normal;
+}
+
+.add-tab-icon{
+    width: 40px;
+    height: 40px;
+    font-size: 20px;
+    color: #ffffff;
+    font-weight: bold;
+    background-color: var(--colorPrimary);
+}
+
+.el-tabs--card>.el-tabs__header{
+    border-bottom: none!important;
+}
+
+.el-tabs--card>.el-tabs__header .el-tabs__nav{
+    border: none!important;
+}
