--- a/src/assets/css/product.css
+++ b/src/assets/css/product.css
@@ -3,6 +3,7 @@
     background-color: #E8E8E8;
     min-height: 100vh;
     height: 100%;
+    width: 100%;
 }
 .product-layout-section{
     display: flex;
