--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -51,3 +51,41 @@
 .w-100percent{
     width: 100%;
 }
+
+.text-align-center{
+    text-align: center;
+}
+
+.align-item-center{
+    align-items: center;
+}
+
+.justify-center{
+    justify-content: center;
+}
+.justify-spacebetween{
+    justify-content: space-between;
+}
+
+.flex-1{
+    flex:1;
+}
+
+.text-center{
+    text-align: center!important;
+}
+
+.text-left{
+    text-align: start!important;
+}
+
+.text-right{
+    text-align: end!important;;
+}
+
+.padding-20{
+    padding:20px 0px;
+}
+.padding-10{
+    padding:10px 0px;
+}
