--- a/src/assets/css/admin_password.css
+++ b/src/assets/css/admin_password.css
@@ -21,9 +21,11 @@
     border: 2px solid red;
     border-radius: 8px;
     background-color: #ffffff;
+
 }
 
 .admin-password-section{
     min-height: 100vh;
     background-color: #E8E8E8;
+    padding: 20px;
 }
