--- a/src/assets/css/sidemenu.css
+++ b/src/assets/css/sidemenu.css
@@ -19,7 +19,8 @@
 }
 
 .side-menu-container{
-    height: 100vh!important;
+    min-height: 100vh;
+    height: 100%!important;
     display: flex;
     flex-direction: column;
 }
