--- a/src/assets/css/inbox.css
+++ b/src/assets/css/inbox.css
@@ -14,6 +14,8 @@
 
 .inbox-section{
     background-color: #E8E8E8;
+    height: 100%;
+    min-height: 100vh;
 }
 
 .el-input__prefix,.el-select__suffix i{
