--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -1,5 +1,5 @@
 .home-border{
-    border: 2px solid red;
+    /* border: 2px solid red; */
     background-color: white;
     border-radius: 4px;
 }
@@ -66,7 +66,7 @@
     padding-top: 1.25rem;
 }
 .chart-circle{
-    border: 2px solid red;
+    /* border: 2px solid red; */
 }
 
 .chart-data{
@@ -94,4 +94,15 @@
 
 .chart-percentage{
     text-align: end;
+}
+
+.graph-border-container{
+    border: 0.25rem;
+    margin:1.25rem 0px;
+    padding: 1.25rem;
+    background-color: #fff;
+}
+
+.apex-chart-candle{
+    padding: 1.25rem 0px;
 }
